[package]
name = "mapping_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
http-body-util = "0.1.2"
hyper = "1.4.1"
serde = "1.0.210"
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "migrate",
] }
# time = { version = "0.3.36", features = ["serde", "macros"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.0", features = ["util"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
